<resources>
    <string name="app_name">Bakkal Defteri</string>

    <string name="homeFragmentGreetingsTvText">Merhaba</string>
    <string name="homeFragmentUserNameTvText">Fatih Bey</string>
    <string name="homeFragmentSpendingTvText">Harcamalarınız</string>
    <string name="homeFragmentCurrentMoneyTvText">0 TL</string>
    <string name="homeFragmentTLButtonText">TL</string>
    <string name="homeFragmentSterlingButtonText">Sterlin</string>
    <string name="homeFragmentEuroButtonText">Euro</string>
    <string name="homeFragmentDollarButtonText">Dolar</string>
    <string name="homeFragmentCoordinatorLayoutFloatingActionButtonText">EKLE</string>

    <string name="SpendingAddingScreenFragmentTextViewTitleText">Harcama Ekle</string>
    <string name="SpendingAddingScreenFragmentEditTextDescriptionHint">Açıklama</string>
    <string name="SpendingAddingScreenFragmentEditTextSpendingHint">Harcama</string>
    <string name="spendingAddingScreenFragmentBillRadioButtonText">Fatura</string>
    <string name="spendingAddingScreenFragmentOthersRadioButtonText">Diğer</string>
    <string name="spendingAddingScreenFragmentRentRadioButtonText">Kira</string>
    <string name="spendingAddingScreenFragmentTLRadioButtonText">TL</string>
    <string name="spendingAddingScreenFragmentDollarRadioButtonText">Dolar</string>
    <string name="spendingAddingScreenFragmentEuroRadioButtonText">Euro</string>
    <string name="spendingAddingScreenFragmentSterlingRadioButtonText">Sterlin</string>
    <string name="spendingAddingScreenFragmentAddButtonText">Ekle</string>

    <string name="ChangeNameFragmentTextViewTitleText">İsim Değiştir</string>
    <string name="ChangeNameFragmentEditTextHint">İsminizi Giriniz</string>
    <string name="ChangeNameFragmentManRadioButtonText">Erkek</string>
    <string name="ChangeNameFragmentWomanRadioButtonText">Kadın</string>
    <string name="ChangeNameFragmentDoNotWantRadioButtonText">Belirtmek İstemiyorum</string>
    <string name="changeNameFragmentAddButtonText">Ekle</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstOnboardingScreenTextViewText">İşte Bakkal Defteri Uygulaması</string>
    <string name="firstOnboardingScreenTextViewText2">Artık Karışıklığa son</string>
    <string name="onBoardingScreenButtonText">Geç</string>
    <string name="secondOnboardingScreenTextViewText">Kolayca Dönüştür</string>
    <string name="secondOnboardingScreenTextViewText2">Harcamalarını gruplandırarak kolayca izle</string>
    <string name="thirdOnboardingScreenTextViewText">Farklı para birimlerine dönüştür</string>
    <string name="thirdOnboardingScreenTextViewText2">Harcamalarını farklı para birimleri ile güncel kur üzerinden takip et</string>
</resources>