<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".spendingadding.SpendingAddingScreenFragment">


        <TextView
            android:id="@+id/SpendingAddingScreenFragmentTextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/SpendingAddingScreenFragmentTextViewTitleMargin"
            android:text="@string/SpendingAddingScreenFragmentTextViewTitleText"
            android:textSize="@dimen/SpendingAddingScreenFragmentTextViewTitleTextSize" />

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btnGray" />

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginStart"
            android:layout_marginTop="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginTop"
            android:layout_marginEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginEnd"
            android:orientation="vertical"
            app:boxCornerRadiusBottomEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusBottomStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusTopEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusTopStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SpendingAddingScreenFragmentEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SpendingAddingScreenFragmentEditTextDescriptionHint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:orientation="vertical"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginTop"
            android:layout_marginStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginStart"
            android:layout_marginEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutMarginEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusBottomStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusTopEnd="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius"
            app:boxCornerRadiusTopStart="@dimen/SpendingAddingScreenFragmentTextInputLayoutRadius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SpendingAddingScreenFragmentEditTextSpending"
                android:inputType="text"
                android:hint="@string/SpendingAddingScreenFragmentEditTextSpendingHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/spendingAddingScreenFragmentRadioGroupMarginStart">

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentBillRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentBillRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_marginTop="@dimen/spendingAddingScreenFragmentBillRadioButtonMarginTop" />

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentRentRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentRentRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_marginTop="@dimen/spendingAddingScreenFragmentRentRadioButtonMarginTop" />

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentOthersRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentOthersRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_marginTop="@dimen/spendingAddingScreenFragmentOthersRadioButtonMarginTop" />

        </RadioGroup>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/spendingAddingScreenFragmentRadioGroupMarginStart"
            android:layout_marginTop="@dimen/spendingAddingScreenFragmentSecondRadioGroupMarginTop">

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentTLRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentTLRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentDollarRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentDollarRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentEuroRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentEuroRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/spendingAddingScreenFragmentSterlingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spendingAddingScreenFragmentSterlingRadioButtonText"
                android:textSize="@dimen/spendingAddingScreenFragmentRadioButtonTextSize"
                android:layout_weight="1" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/spendingAddingScreenFragmentAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spendingAddingScreenFragmentAddButtonMarginTop"
            android:layout_marginEnd="@dimen/spendingAddingScreenFragmentAddButtonMarginEnd"
            android:text="@string/spendingAddingScreenFragmentAddButtonText"
            app:cornerRadius="@dimen/spendingAddingScreenFragmentAddButtonRadius" />


    </LinearLayout>
</layout>