<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".openingscreens.SecondOnboardingScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/secondOnboardingScreenLottie"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/second_onboarding_screen">

    </com.airbnb.lottie.LottieAnimationView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondOnboardingScreenTextViewText"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/onboardingScreenTextViewMarginTop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondOnboardingScreenTextViewText2"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/onboardingScreenTextViewMarginTop"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/secondOnboardingScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoardingScreenButtonText"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"

        />

</LinearLayout>