<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".openingscreens.FirstOnboardingScreen"
    android:padding="16dp">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/firstOnboardingScreenLottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/firstOnboardingTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/first_onboarding_screen">

    </com.airbnb.lottie.LottieAnimationView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/firstOnboardingTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/firstOnboardingScreenTextViewText"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstOnboardingScreenLottie"
        app:layout_constraintBottom_toTopOf="@id/firsOnboardingTextView2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/firsOnboardingTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstOnboardingTextView1"
        app:layout_constraintBottom_toTopOf="@id/firstOnboardingScreenButton"
        android:text="@string/firstOnboardingScreenTextViewText2"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
   />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/firstOnboardingScreenButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoardingScreenButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>