<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".openingscreens.ThirdOnboardingScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/thirdOnboardingScreenLottie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/thirdOnboardingScreenTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/third_onboarding_screen">

    </com.airbnb.lottie.LottieAnimationView>


    <TextView
        android:id="@+id/thirdOnboardingScreenTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdOnboardingScreenTextViewText"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/onboardingScreenTextViewMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdOnboardingScreenLottie"
        app:layout_constraintBottom_toTopOf="@id/thirdOnboardingScreenTextView2"
        />

    <TextView
        android:id="@+id/thirdOnboardingScreenTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thirdOnboardingScreenTextViewText2"
        android:textSize="@dimen/onboardingScreenTextViewTextSize"
        android:layout_marginTop="@dimen/onboardingScreenTextViewMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdOnboardingScreenTextView1"
        app:layout_constraintBottom_toTopOf="@id/thirdOnboardingScreenButton"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/thirdOnboardingScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoardingScreenButtonText"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>