<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeFragmentViewModel"
            type="com.example.bakkaldefteri.home.HomeViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:viewBindingIgnore="true"
        tools:context=".home.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeFragmentUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homeFragmentTopConstraintLayoutHeight"
            android:background="@drawable/fragment_home_constraint_layout_theme">


            <TextView
                android:id="@+id/homeFragmentGreetingsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeFragmentGreetingsTvText"
                android:textColor="@color/white"
                android:textSize="@dimen/homeFragmentTextSize"
                android:layout_marginStart="@dimen/homeFragmentStartMargin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/homeFragmentUserNameTv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/homeFragmentUserNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Bir isim giriniz"
                android:onClick="@{() -> homeFragmentViewModel.onPlayAgain()}"
                android:Text="@{homeFragmentViewModel.homeUserName}"
                android:textColor="@color/white"
                android:textSize="@dimen/homeFragmentTextSize2"
                android:layout_marginStart="@dimen/homeFragmentStartMargin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeFragmentGreetingsTv"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/homeFragmentSpendingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeFragmentSpendingTvText"
                android:textColor="@color/white"
                android:textSize="@dimen/homeFragmentTextSize"
                android:layout_marginEnd="@dimen/homeFragmentEndMargin"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@id/homeFragmentCurrentMoneyTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/homeFragmentCurrentMoneyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeFragmentCurrentMoneyTvText"
                android:textColor="@color/white"
                android:textSize="@dimen/homeFragmentTextSize2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/homeFragmentSpendingTv"
                app:layout_constraintStart_toStartOf="@+id/homeFragmentSpendingTv"
                app:layout_constraintTop_toBottomOf="@+id/homeFragmentSpendingTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/homeFragmentButtonConstraintLayoutHeight">


<!--            <com.google.android.material.chip.ChipGroup-->
<!--                android:id="@+id/homeFragmentChipGroup"-->
<!--                android:orientation="horizontal"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                app:singleLine="true">-->

                <com.google.android.material.chip.Chip
                    android:id="@+id/btnHomeFragmentTL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/btnSilver"
                    app:strokeColor="@color/btnGray"
                    app:strokeWidth="@dimen/btnStrokeWidth"
                    app:cornerRadius="@dimen/btnCornerRadius"
                    android:textColor="@color/btnGray"
                    android:text="@string/homeFragmentTLButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnHomeFragmentSterling"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/btnHomeFragmentSterling"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/btnSilver"
                    app:strokeColor="@color/btnGray"
                    app:strokeWidth="@dimen/btnStrokeWidth"
                    app:cornerRadius="@dimen/btnCornerRadius"
                    android:textColor="@color/btnGray"
                    android:text="@string/homeFragmentSterlingButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnHomeFragmentTL"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnHomeFragmentEuro" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/btnHomeFragmentEuro"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/btnSilver"
                    app:strokeColor="@color/btnGray"
                    app:strokeWidth="@dimen/btnStrokeWidth"
                    app:cornerRadius="@dimen/btnCornerRadius"
                    android:textColor="@color/btnGray"
                    android:text="@string/homeFragmentEuroButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnHomeFragmentSterling"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnHomeFragmentDollar" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/btnHomeFragmentDollar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:backgroundTint="@color/btnSilver"
                    app:strokeColor="@color/btnGray"
                    app:strokeWidth="@dimen/btnStrokeWidth"
                    app:cornerRadius="@dimen/btnCornerRadius"
                    android:textColor="@color/btnGray"
                    android:text="@string/homeFragmentDollarButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnHomeFragmentEuro"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnHomeFragmenttoSpendingAddingScreenFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/homeFragmentCoordinatorLayoutFloatingActionButtonMarginEnd"
                android:layout_marginBottom="@dimen/homeFragmentCoordinatorLayoutFloatingActionButtonMarginBottom"
                android:backgroundTint="@color/yellow"
                android:text="@string/homeFragmentCoordinatorLayoutFloatingActionButtonText"
                android:textColor="@color/white"
                android:textSize="@dimen/homeFragmentTextSize"
                app:iconTint="@color/white"
                app:icon="@drawable/ic_floating_action_button_add" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeFragmentCoordinatorLayoutRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
</layout>